--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_it: ^8.0.3
   intl: ^0.19.0
   intl_utils: ^2.8.10
+  skeletonizer: ^1.4.3
   url_launcher: ^6.3.1
 
 dev_dependencies:
